[gd_scene load_steps=3 format=2]

[ext_resource path="res://explosives/molotov_cocktail/fire.gd" type="Script" id=1]
[ext_resource path="res://sfx/explosions/sfx_exp_medium3.wav" type="AudioStream" id=2]

[node name="Fire" type="Area2D"]
collision_layer = 0
collision_mask = 9
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="SoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
max_distance = 512.0
bus = "SFX"

[connection signal="child_exiting_tree" from="." to="." method="_on_Fire_child_exiting_tree"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
